core/tests/ui/invalid_dup.stderr
error[E0080]: evaluation of constant value failed
 --> src/time_temperature_curve/impl_polyline_const.rs
  |
  |                 panic!("DuplicateTime: Duplicate time value in polyline");
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'DuplicateTime: Duplicate time value in polyline', $DIR/src/time_temperature_curve/impl_polyline_const.rs:21:17
  |
note: inside `ImplPolylineConst::<2>::from_array`
 --> src/time_temperature_curve/impl_polyline_const.rs
  |
  |                 panic!("DuplicateTime: Duplicate time value in polyline");
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `_INVALID_DUP`
 --> tests/ui/invalid_dup.rs:3:44
  |
3 |   const _INVALID_DUP: ImplPolylineConst<2> = ImplPolylineConst::from_array([
  |  ____________________________________________^
4 | |     (0.0, 1.0),
5 | |     (0.0, 2.0),
6 | | ]);
  | |__^
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)
